<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/setting_background"
    android:theme="@style/settings_pop_up_style"
    tools:context=".app.popup.HelpPopup">

    <TextView
        android:id="@+id/textView_help_title"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/help_title"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView_help_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_crossdle"
        android:textColor="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <Button
        android:id="@+id/button_help_understood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/help_understood_button" />
</LinearLayout>