<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12sp"
    tools:context=".app.fragment.GamebarFragment">

    <ImageView
        android:id="@+id/gamebar_imageView_back_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/gamebar_help_settings"
        android:src="@drawable/ic_baseline_arrow_back_24"/>

    <TextView
        android:id="@+id/gamebar_imageView_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/gamebar_heading_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/gamebar_imageView_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/gamebar_help_info"
        android:src="@drawable/ic_baseline_info_24"
        app:tint="@color/white"
        android:clickable="true"/>

</LinearLayout>