<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.activity.HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_heading_games"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history_textView_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_placeholder_number"
                android:textAlignment="center"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_heading_streak"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history_textView_streak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_placeholder_number"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_heading_wins"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history_textView_win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_placeholder_percent"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="36sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/history_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>