<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/setting_background"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:theme="@style/settings_pop_up_style"
    tools:context=".app.popup.SettingsPopup">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_text_view_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/volume"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <SeekBar
            android:id="@+id/seekBar_settings_volume"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_text_view_themes"
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/themes"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/spinner_settings_theme"
            android:layout_width="372dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck"
            android:textColor="@color/teal_700"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_settings_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/confirm"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"/>

</LinearLayout>