<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.MainActivity"
    android:background="@drawable/gradient_list">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="303dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/crossdle_logos" />

    <Button
        android:id="@+id/button_main_daily_crossdle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_style"
        android:paddingHorizontal="68dp"
        android:text="@string/play_daily_crossdle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_main_random_crossdle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_style"
        android:paddingHorizontal="54dp"
        android:text="@string/play_random_crossdle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_main_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_style"
        android:paddingHorizontal="60dp"
        android:text="@string/history"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_main_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_style"
        android:paddingHorizontal="56dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>